syntax = "proto3";

package pb;
option go_package = "/pb";

service HelloService {
  rpc GetName (Request) returns (NameResponse) {}
  rpc GetAge (Request) returns (AgeResponse) {}
}

message Request {
}

message NameResponse {
  string name = 1;
}

message AgeResponse {
  uint64 age = 1;
}
